[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amp-protocol"
version = "1.0.0"
description = "Agent Memory Protocol - 让 AI 拥有记忆和成长能力"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Pang & AMP Contributors", email = "hello@amp-protocol.org"}
]
keywords = [
    "ai",
    "agent",
    "memory",
    "protocol",
    "machine-learning",
    "cognitive-science"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
openclaw = [
    "openclaw>=3.0.0",
]
memory-bank = [
    "qdrant-client>=1.0.0",
]

[project.urls]
Homepage = "https://amp-protocol.org"
Documentation = "https://docs.amp-protocol.org"
Repository = "https://github.com/your-org/amp"
Issues = "https://github.com/your-org/amp/issues"
Changelog = "https://github.com/your-org/amp/blob/main/CHANGELOG.md"

[project.scripts]
amp = "amp.cli:main"

[tool.setuptools.packages.find]
where = ["sdk/python"]
include = ["amp*"]

[tool.setuptools.package-data]
amp = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
